# Pragnosia

./: .gitignore  COMPLETE_FEATURES_SUMMARY.md  CONTRIBUTING.md  GENERATION_FIXES.md  IMPROVEMENTS_SUMMARY.md  Pragnosia_Research_Paper_v3.docx  README.md  TESTING_RESULTS.md  TODO.md  USAGE.md  chat.py  evaluate.py  finetune_instruction.py  generate.py  pretrain.py  pyproject.toml  quickstart.sh  requirements.txt  setup.py  test_generation.py  test_hybrid_model.py  test_model_forward.py  train.py  train_coherence_stage.py  train_production.sh  train_production_enhanced.sh
.claude/agents/: llm-architect.md
docs/: API.md  ARCHITECTURE.md  LOCAL_LEARNING.md  NEUROMODULATION.md
examples/: evaluate.py  test_local_real_data.py  test_local_trainer.py  test_local_trainer_debug.py  train_constant_vram.py  train_large.py  train_lm.py
pragnosia/: __init__.py  config.py  model.py
pragnosia/modules/: __init__.py  attention.py  cortex.py  embeddings.py  experts.py  lora.py  memory_expert.py  mlp.py  normalization.py  plasticity.py  thalamus.py  transformer.py
pragnosia/training/: __init__.py  config.py  curriculum.py  data.py  trainer.py
pragnosia/utils/: __init__.py  memory.py
scripts/: demo.py  evaluate.py  finetune.py  pragnosia_cli.py  train.py
scripts/data/: __init__.py  download_datasets.py  preprocess.py
src/pragnosia/: __init__.py
src/pragnosia/data/: __init__.py  instruction_dataset.py  language_modeling_dataset.py  multitask_dataset.py
src/pragnosia/losses/: __init__.py  distillation.py  intrinsic.py
src/pragnosia/memory/: __init__.py  hippocampus.py  neocortex.py
src/pragnosia/models/: __init__.py  coherence_module.py  enhanced_coherence.py  expert.py  pragnosia_model.py  router.py
tests/: __init__.py  test_basic.py  test_lora.py  test_memory.py  test_memory_expert.py  test_model.py  test_modules.py
(+10 files in other folders)
