[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pragnosia"
version = "0.1.0"
description = "A Brain-Inspired, Energy-Efficient Multimodal Large Language Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pragnosia Team"}
]
keywords = ["llm", "transformer", "moe", "multimodal", "brain-inspired"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.15.0",
    "einops>=0.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
vision = [
    "timm>=0.9.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
]
training = [
    "deepspeed>=0.12.0",
    "wandb>=0.16.0",
    "datasets>=2.15.0",
]
all = [
    "pragnosia[dev,vision,training]",
]

[project.scripts]
pragnosia = "pragnosia.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pragnosia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
